@@ -706,7 +706,7 @@
       "&func.duplicateTab;", "&func.prevTab;", "&func.nextTab;",
       "&func.closeTab;", "&func.closeOtherTabs;", "&func.undoCloseTab;",
       "&func.newWindow;", "&func.duplicateWindow;", "&func.closeOtherWindows;",
-      "&func.closeBrowser;", "&func.minimizeWindow;", "&func.fullscreen;",
+      "&func.quit;", "&func.minimizeWindow;", "&func.fullscreen;",
       "&func.openLink;", "&func.openLinkNewWindow;", "&func.copyLink;",
       "&func.sendLink;", "&func.copyImageLocation;", "&func.saveLinkAs;",
       "&func.saveImageAs;", "&func.savePageAs;", "&func.hideImages;",
@@ -737,7 +737,7 @@
       "back", "forward", "reload", "up", "root", "pageTop", "pageBottom",
       "autoscrolling", "newTab", "duplicateTab", "prevTab", "nextTab",
       "closeTab", "closeOtherTabs", "undoCloseTab", "newWindow",
-      "duplicateWindow", "closeOtherWindows", "closeBrowser", "minimizeWindow",
+      "duplicateWindow", "closeOtherWindows", "quit", "minimizeWindow",
       "fullscreen", "openLink", "openLinkNewWindow", "copyLink", "sendLink",
       "copyImageLocation", "saveLinkAs", "saveImageAs", "savePageAs",
       "hideImages", "copyImage", "homepage", "dailyReadings", "searchWeb",
