@@ -45,7 +45,7 @@ undoCloseTab=Zpět - Zavřít panel
 newWindow=Nové okno
 duplicateWindow=Duplikovat okno
 closeOtherWindows=Zavřít ostatní okna
-closeBrowser=Zavřít prohlížeč
+quit = Quit Firefox
 minimizeWindow=Minimalizovat okno
 fullscreen=Na celou obrazovku
 
