@@ -27,7 +27,7 @@ undoCloseTab=Tab wiederherstellen
 newWindow=Neues Fenster
 duplicateWindow=Fenster duplizieren
 closeOtherWindows=Andere Fenster schließen
-closeBrowser=Browser schließen
+quit = Quit Firefox
 minimizeWindow=Fenster minimieren
 fullscreen=Vollbild
 openLink=Link öffnen
