@@ -45,7 +45,7 @@ undoCloseTab=Undo Close Tab
 newWindow=New Window
 duplicateWindow=Duplicate Window
 closeOtherWindows= Close Other Windows
-closeBrowser=Close Browser
+quit = Quit Firefox
 minimizeWindow=Minimize Window
 fullscreen=Toggle Fullscreen
 
