@@ -41,7 +41,7 @@ undoCloseTab=Deshacer cerrar pestaña
 newWindow=Nueva ventana
 duplicateWindow=Duplicar ventana
 closeOtherWindows=Cerrar las otras ventanas
-closeBrowser=Cerrar navegador
+quit = Salir de Firefox
 minimizeWindow=Minimizar ventana
 fullscreen=Activar/desactivar pantalla completa
 openLink=Abrir enlace
