@@ -45,7 +45,7 @@ undoCloseTab = Annuler fermer onglet
 newWindow=Nouvelle fen\u00EAtre
 duplicateWindow=Dupliquer fen\u00EAtre
 closeOtherWindows=Ferm. autres fen\u00EAtres
-closeBrowser = Fermer navigateur
+quit = Quitter Firefox
 minimizeWindow=R\u00E9duire fen\u00EAtre
 fullscreen=Basculer plein \u00E9cran
 
