@@ -40,7 +40,7 @@ undoCloseTab=Lap bezárásának visszavonása
 newWindow=Új ablak
 duplicateWindow=Ablak megkettőzése
 closeOtherWindows=Többi ablak bezárása
-closeBrowser=Böngésző bezárása
+quit = Quit Firefox
 minimizeWindow=Ablak minimalizálása
 fullscreen=Teljes képernyő
 openLink=Hivatkozás megnyitása
