@@ -31,7 +31,7 @@ undoCloseTab=Annulla Chiudi Linguetta
 newWindow=Nuova Finestra
 duplicateWindow=Duplica Finestra
 closeOtherWindows=Chiudi le altre Finestre
-closeBrowser=Chiudi il Browser
+quit = Quit Firefox
 minimizeWindow=Minimizza Finestra
 fullscreen=Attiva/Disattiva Schermo Intero
 
