@@ -45,7 +45,7 @@ undoCloseTab = 閉じたタブを復元
 newWindow=新しいウィンドウ
 duplicateWindow=ウィンドウを複製
 closeOtherWindows= 他のウィンドウを閉じる
-closeBrowser = ブラウザを閉じる
+quit = Quit Firefox
 minimizeWindow=最小化
 fullscreen=全画面表示の切り替え
 
