@@ -40,7 +40,7 @@ undoCloseTab=탭 닫기 취소
 newWindow=새 창
 duplicateWindow=창 복제
 closeOtherWindows=다른 창 닫기
-closeBrowser=브라우저 닫기
+quit = Quit Firefox
 minimizeWindow=창 최소화
 fullscreen=전체화면 전환
 openLink=링크 열기
