@@ -27,7 +27,7 @@ undoCloseTab=Cofnij zamknięcie karty
 newWindow=Nowe okno
 duplicateWindow=Powiel okno
 closeOtherWindows=Zamknij pozostałe okna
-closeBrowser= Zamknij przeglądarkę
+quit = Quit Firefox
 minimizeWindow=Minimalizuj okno
 fullscreen=Pełny ekran
 openLink=Otwórz odnośnik
