@@ -45,7 +45,7 @@ undoCloseTab = Desfazer Fechar Aba
 newWindow=Nova Janela
 duplicateWindow=Duplicar Janela
 closeOtherWindows= Fechar Outras Janelas
-closeBrowser = Fechar Navegador
+quit = Quit Firefox
 minimizeWindow=Minimizar Janela
 fullscreen=Alternar Tela Cheia
 
