@@ -27,7 +27,7 @@ undoCloseTab=Späť - Zavrieť kartu
 newWindow=Nové okno
 duplicateWindow=Duplikovať okno
 closeOtherWindows=Zavrieť ostatné okná
-closeBrowser=Ukončiť prehliadač
+quit = Quit Firefox
 minimizeWindow=Minimalizovať okno
 fullscreen=Na celú obrazovku
 openLink=Otvoriť odkaz
