@@ -45,7 +45,7 @@ undoCloseTab=Sekme Kapatmayı Geri Al
 newWindow=Yeni Pencere
 duplicateWindow=Pencereyi İkile
 closeOtherWindows=Diğer Pencereleri Kapat
-closeBrowser=Tarayıcıyı Kapat
+quit = Quit Firefox
 minimizeWindow=Pencereyi Simge Durumuna Küçült
 fullscreen=Tam Ekrana Geçiş Yap
 
