@@ -45,7 +45,7 @@ undoCloseTab=撤销关闭的标签页
 newWindow=新建窗口
 duplicateWindow=复制窗口
 closeOtherWindows=关闭其他窗口
-closeBrowser=关闭浏览器
+quit = Quit Firefox
 minimizeWindow=最小化窗口
 fullscreen=切换到全屏
 
