@@ -45,7 +45,7 @@ undoCloseTab = 復原關閉的分頁
 newWindow=開新視窗
 duplicateWindow=複製視窗
 closeOtherWindows= 關閉其他視窗
-closeBrowser = 關閉瀏覽器
+quit = Quit Firefox
 minimizeWindow=視窗最小化
 fullscreen=全螢幕
 
